# HostelMan

./: .gitignore  docker-compose.yml
application/: .env  Dockerfile  go.mod  go.sum  kafka.go  main.go  test-commands  utils.go
application/.devcontainer/: devcontainer.json
client/: package-lock.json  package.json
client/.devcontainer/: devcontainer.json
client/src/routes/: +page.svelte  Header.svelte
document-verification/.devcontainer/: devcontainer.json
document-verification/rust-consumer/: Cargo.toml  Dockerfile
document-verification/rust-consumer/src/: main.rs
payment/: Dockerfile  app.py  requirements.txt
payment/.devcontainer/: devcontainer.json
payment/static/: checkout.js
payment/templates/: checkout.html  form_entry.html
