[package]
name = "rust-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
chrono = "0.4.23"
urlencoding = "2.1.2"


[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-sync"]